--- a/src/landing.html
+++ b/src/landing.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome | Portfolio</title>
   <link rel="stylesheet" href="style/landing.css">
+  <link rel="icon" type="image/x-icon" href="assets/images/favi.png">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <div class="floating-icon">⚡</div>
     <h1>Welcome to My Portfolio</h1>
     <p>
-      A showcase of my work, skills, and passion for web development.  
+      A showcase of my work, skills, and passion for System Development.  
       Explore projects, experience, and more inside.
     </p>
     <a href="index.html" class="btn-enter">Enter Portfolio</a>
