Add google map address

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <!-- ================= Sidebar ================= -->
   <aside class="sidebar">
     <!-- Profile picture -->
-    <img src="assets/images/va.JPG" alt="profile-picture" class="va">
+    <img src="assets/images/val.png" alt="profile-picture" class="va">
 
     <!-- Name & Job -->
-    <h1>Valiant S. Mi-ing</h1>
+    <h1>Valiant S. Mi-ng</h1>
     <p class="job-title">System Developer</p>
     
     <hr>
@@ -39,6 +39,14 @@
       </div>
 
       <div class="info-item">
+        <span class="icon"><img src="assets/images/linkedin.png" alt="linkedIn-icon"></span>
+        <div class="text-block">
+          <p class="label">LinkedIn:</p>
+          <p class="value">www.linkedin.com/in/valiant-mi-ing/</p>
+        </div>
+      </div>
+
+      <div class="info-item">
         <span class="icon"><img src="assets/images/location.png" alt="address-icon"></span>
         <div class="text-block">
           <p class="label">Address:</p>
@@ -46,14 +54,16 @@
         </div>
       </div>
 
-      <div class="info-item">
-        <span class="icon"><img src="assets/images/linkedin.png" alt="linkedIn-icon"></span>
-        <div class="text-block">
-          <p class="label">LinkedIn:</p>
-          <p class="value">www.linkedin.com/in/valiant-mi-ing/</p>
-        </div>
+      <!-- Inside sidebar -->
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d478.3972237853742!2d120.57155578834967!3d16.41579447665816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sph!4v1759113567681!5m2!1sen!2sph"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
-    </div>
+
+
   </aside>
 
 
@@ -64,8 +74,8 @@
       <!-- Navigation -->
       <nav class="nav-box">
         <div class="top-nav">
-          <a class="active" href="landing.html">Home</a>
-          <a data-section="about">About</a>
+          <a href="landing.html">Home</a>
+          <a class="active" data-section="about">About</a>
           <a data-section="resume">Skills</a>
           <a data-section="portfolio">My Projects</a>
           <a data-section="blog">Thesis</a>
@@ -77,12 +87,10 @@
       <section id="about" class="content-section active">
         <h2>About Me</h2>
         <p>
-          I’m a Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-          I enjoy turning complex problems into simple, beautiful, and intuitive designs.
+          I’m a Enthusiastic person that have a passion in web development and system development. Where I am
         </p>
         <p>
-          My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-          I aim to bring across your message and identity in the most creative way.
+          
         </p>
 
         <h2>What I'm Doing</h2>
