--- a/landing.html
+++ b/landing.html
@@ -13,10 +13,12 @@
   <div class="landing-container">
     <div class="floating-icon">⚡</div>
     <h1>Welcome to My Portfolio</h1>
+
     <p>
-      A showcase of my work, skills, and passion for System Development.  
+      A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more inside.
     </p>
+
     <a href="index.html" class="btn-enter">Enter Portfolio</a>
 
     <footer>
