--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <section id="about" class="content-section active">
         <h2>About Me</h2>
         <p>
-          I’m a Enthusiastic person that have a passion in web development and system development. Where I am
-        </p>
+          I am a passionate System Developer with experience in designing, building, and maintaining software solutions that solve real-world problems. 
+          I specialize in creating efficient, scalable, and user-friendly applications by combining strong technical skills with a keen eye for detail. 
         <p>
           
         </p>
@@ -112,48 +112,51 @@
 
       <!-- Resume Section -->
       <section id="resume" class="content-section">
-        <h2>Resume</h2>
-
         <!-- Education -->
         <div class="resume-section">
           <h3><span class="icon">🎓</span> Education</h3>
+            <div class="resume-item">
+              <h4>Saint Louis University <span class="date">2020 — 2025</span></h4>
+              <p>Bachelor of Science in Information Technology</p>
+              <p class="school-address">Baguio City, Philippines</p>
+            </div>
+          
+          <br>
+
           <div class="resume-item">
-            <h4>University School of The Arts</h4>
-            <span class="date">2011 — 2014</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis.</p>
+              <h4>Mankayan National High School<span class="date">2020 — 2018</span></h4>
+              <p>Senior High School</p>
+              <p class="school-address">Benguet, Philippines</p>
           </div>
+
+           <br>
+
           <div class="resume-item">
-            <h4>New York Academy of Art</h4>
-            <span class="date">2007 — 2011</span>
-            <p>Vivamus vulputate lacus fermentum, tincidunt libero id, cursus lorem.</p>
+              <h4>Mankayan High School<span class="date">2014 — 2018</span></h4>
+              <p>Junior High School</p>
+              <p class="school-address">Benguet, Philippines</p>
           </div>
-          <div class="resume-item">
-            <h4>High School of Art and Design</h4>
-            <span class="date">2003 — 2007</span>
-            <p>Quisque sodales augue at sapien laoreet, vitae varius nulla tristique.</p>
-          </div>
+          <br>
         </div>
 
         <!-- Experience -->
         <div class="resume-section">
           <h3><span class="icon">💼</span> Experience</h3>
-          <div class="resume-item">
-            <h4>Creative Director - XYZ Company</h4>
-            <span class="date">2019 — Present</span>
-            <p>Responsible for overseeing the creative direction of web and branding projects.</p>
-          </div>
-          <div class="resume-item">
-            <h4>UI/UX Designer - ABC Studio</h4>
-            <span class="date">2014 — 2019</span>
-            <p>Designed user-friendly digital interfaces and managed client design strategies.</p>
-          </div>
+            <div class="resume-item">
+              <h4>Technical Support (Intern) <span class="date">January 2025 — May 2025</span></h4>
+              <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
+                 of the company website.
+              </p>
+            </div>
         </div>
+
+        <br>
 
         <!-- Skills -->
         <div class="resume-section">
           <h3><span class="icon">⚡</span> My Skills</h3>
           <div class="skill">
-            <span class="skill-title">Web Design</span>
+            <span class="skill-title">Web Development</span>
             <span class="skill-percent">85%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 85%;"></div></div>
           </div>
