--- a/index.html
+++ b/index.html
@@ -154,26 +154,70 @@
 
         <!-- Skills -->
         <div class="resume-section">
-          <h3><span class="icon">⚡</span> My Skills</h3>
+          <h3><span class="icon">🔥</span> My Skills</h3>
           <div class="skill">
-            <span class="skill-title">Web Development</span>
-            <span class="skill-percent">85%</span>
-            <div class="skill-bar"><div class="skill-progress" style="width: 85%;"></div></div>
+
+            <h4>Programming Language</h4>
+            
+            <br>
+            <span class="skill-title">Java</span>
+            <span class="skill-percent">80%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 80%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title">Graphic Design</span>
-            <span class="skill-percent">75%</span>
-            <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
+            <span class="skill-title">Python</span>
+            <span class="skill-percent">35%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 35%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title">Branding</span>
+            
+            <h4>Web Developement</h4>
+
+            <br>
+            <span class="skill-title">Php</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title">WordPress</span>
-            <span class="skill-percent">90%</span>
-            <div class="skill-bar"><div class="skill-progress" style="width: 90%;"></div></div>
+            <span class="skill-title">HTML</span>
+            <span class="skill-percent">65%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
+          </div>
+
+          <div class="skill">
+            <span class="skill-title">Javascript</span>
+            <span class="skill-percent">55%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 55%;"></div></div>
+          </div>
+
+          <div class="skill">
+            <span class="skill-title">CSS</span>
+            <span class="skill-percent">45%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 45%;"></div></div>
+          </div>
+
+          <div class="skill">
+            <span class="skill-title">Wordpress</span>
+            <span class="skill-percent">40%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 40%;"></div></div>
+          </div>
+
+           <h4>Database Management</h4>
+
+            <br>
+          <div class="skill">
+            <span class="skill-title">MySQL</span>
+            <span class="skill-percent">75%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
+          </div>
+
+          <h4>Version Control</h4>
+
+            <br>
+          <div class="skill">
+            <span class="skill-title">Git</span>
+            <span class="skill-percent">60%</span>
+            <div class="skill-bar"><div class="skill-progress" style="width: 60%;"></div></div>
           </div>
         </div>
       </section>
@@ -182,13 +226,30 @@
       <section id="portfolio" class="content-section">
         <h2>Portfolio</h2>
         <div class="card-container">
+
           <div class="card">
-            <h3>Project 1</h3>
-            <p>Short description of your project here.</p>
+            <h3>Wordy Game</h3><br>
+            <p>It is game called wordy where players can create account and login. In the game a player can 
+              create a waiting lobby for other players to join and within 10 seconds the game will start.
+              <!-- The players will play a round where each round a random 10 letters is given and players 
+              will start to from words from it within 10 seconds, the player who has the longest word will be
+              declared as the winner after the round time. After another round will start with new 10 letters
+              a player is declared the game winner after 3 round win. -->
+            </p>
           </div>
+
           <div class="card">
-            <h3>Project 2</h3>
-            <p>Short description of your project here.</p>
+            <h3>Document Reviewer Web Application</h3><br>
+            <p>It is a web application document reviewer where a user can upload a document for a offices to review.
+              The document can be either declined or approved for the next review in the other office.
+            </p>
+          </div>
+
+          <div class="card">
+            <h3>Wordy Game</h3><br>
+            <p>It is game called wordy where players can create account and login. In the game a player can 
+              create a waiting lobby for other players to join and within 10 seconds the game will start.
+            </p>
           </div>
         </div>
       </section>
