--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style/index.css">
-  <link rel="icon" type="image/x-icon" href="assets/images/favi.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/fav.png">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <img src="assets/images/val.png" alt="profile-picture" class="va">
 
     <!-- Name & Job -->
-    <h1>Valiant S. Mi-ng</h1>
+    <h1>Valiant S. Mi-ing</h1>
     <p class="job-title">System Developer</p>
     
     <hr>
@@ -34,7 +34,7 @@
         <span class="icon"><img src="assets/images/phone.png" alt="phone-icon"></span>
         <div class="text-block">
           <p class="label">Phone:</p>
-          <p class="value">(+63) 939 7144 479</p>
+          <p class="val">(+63) 939 7144 479</p>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
         <div class="top-nav">
           <a href="landing.html">Home</a>
           <a class="active" data-section="about">About</a>
-          <a data-section="resume">Skills</a>
+          <a data-section="resume">Skills & Education</a>
           <a data-section="portfolio">My Projects</a>
           <a data-section="blog">Thesis</a>
           <a data-section="contact">Contact</a>
@@ -86,26 +86,40 @@
       <!-- About Section -->
       <section id="about" class="content-section active">
         <h2>About Me</h2>
-        <p>
-          I am a passionate System Developer with experience in designing, building, and maintaining software solutions that solve real-world problems. 
-          I specialize in creating efficient, scalable, and user-friendly applications by combining strong technical skills with a keen eye for detail. 
-        <p>
+          <p>
+            I am a passionate System Developer with experience in designing, building, and maintaining software solutions that solve real-world problems. 
+            I specialize in creating efficient, scalable, and user-friendly applications by combining strong technical skills with a keen eye for detail. 
+            My expertise includes backend and frontend development, database design, and systems integration. 
+            I enjoy working with modern frameworks, and agile methodologies to deliver high-quality results. 
+            Beyond coding, I value teamwork, continuous learning, and innovation, striving to provide solutions that not only meet client needs but also exceed expectations.
+          </p>
           
         </p>
 
-        <h2>What I'm Doing</h2>
+        <h2>Interest</h2>
         <div class="card-container">
           <div class="card">
-            <h3>Web Development</h3>
-            <p>High-quality development of sites at the professional level.</p>
+            <h3>System Development</h3>
+            <p>High-quality development of responsive and dynamic websites at the professional level.</p>
           </div>
           <div class="card">
-            <h3>Web App</h3>
-            <p>Professional development of applications for iOS and Android.</p>
+            <h3>Web Applications</h3>
+            <p>Professional development of scalable and secure web applications for businesses and organizations.</p>
           </div>
+  
+          <div class="card">
+            <h3>Database Management</h3>
+            <p>Designing, optimizing, and managing relational and non-relational databases for efficiency and reliability.</p>
+          </div>
+
+          <div class="card">
+            <h3>Solving Sudoko Puzzles</h3>
+            <p>Solving Sudoku puzzles to sharpen logical thinking and problem-solving skills.</p>
+          </div>
+
           <div class="card">
             <h3>Photography</h3>
-            <p>I make high-quality photos of any category at a professional level.</p>
+            <p>Capturing moments and creating visual stories through quality photos.</p>
           </div>
         </div>
       </section>
@@ -132,7 +146,7 @@
            <br>
 
           <div class="resume-item">
-              <h4>Mankayan High School<span class="date">2014 — 2018</span></h4>
+              <h4>Mankayan National High School<span class="date">2014 — 2018</span></h4>
               <p>Junior High School</p>
               <p class="school-address">Benguet, Philippines</p>
           </div>
@@ -145,7 +159,7 @@
             <div class="resume-item">
               <h4>Technical Support (Intern) <span class="date">January 2025 — May 2025</span></h4>
               <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
-                 of the company website.
+                 of the company website. 
               </p>
             </div>
         </div>
@@ -224,10 +238,11 @@
 
       <!-- Portfolio Section -->
       <section id="portfolio" class="content-section">
-        <h2>Portfolio</h2>
+        <h2>My Projects</h2>
         <div class="card-container">
 
           <div class="card">
+            <img src="assets/images/image.png">
             <h3>Wordy Game</h3><br>
             <p>It is game called wordy where players can create account and login. In the game a player can 
               create a waiting lobby for other players to join and within 10 seconds the game will start.
@@ -239,6 +254,7 @@
           </div>
 
           <div class="card">
+            <img src="assets/images/image.png">
             <h3>Document Reviewer Web Application</h3><br>
             <p>It is a web application document reviewer where a user can upload a document for a offices to review.
               The document can be either declined or approved for the next review in the other office.
@@ -246,7 +262,8 @@
           </div>
 
           <div class="card">
-            <h3>Wordy Game</h3><br>
+            <img src="assets/images/image.png">
+            <h3>IT IS A </h3><br>
             <p>It is game called wordy where players can create account and login. In the game a player can 
               create a waiting lobby for other players to join and within 10 seconds the game will start.
             </p>
