--- a/landing.html
+++ b/landing.html
@@ -5,26 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome | Portfolio</title>
   <link rel="stylesheet" href="style/landing.css">
-  <link rel="icon" type="image/x-icon" href="assets/images/favi.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/fav.png">
 </head>
 
 <body>
 
+<div class="landing-wrapper">
+  <!-- Profile Image -->
+  <img src="assets/images/val.png" alt="Profile Picture" class="profile-pic">
+
+  <!-- Text with yellow border -->
   <div class="landing-container">
     <div class="floating-icon">⚡</div>
-    <h1>Welcome to My Portfolio</h1>
-
+    <h1>Valiant S. Mi-ing</h1>
+    <h2>System Developer</h2>
+    <br>
     <p>
       A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more inside.
     </p>
-
     <a href="index.html" class="btn-enter">Enter Portfolio</a>
-
-    <footer>
-      © 2025 My Portfolio. All Rights Reserved.
-    </footer>
   </div>
+</div>
+
+</div>
+
+
 </body>
 
 </html>
