--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="icon"><img src="assets/images/phone.png" alt="phone-icon"></span>
         <div class="text-block">
           <p class="label">Phone:</p>
-          <p class="val">(+63) 939 7144 479</p>
+          <p class="value">(+63) 939 7144 479</p>
         </div>
       </div>
 
