--- a/landing.html
+++ b/landing.html
@@ -22,7 +22,7 @@
     <br>
     <p>
       A showcase of my work, skills, and passion for System and Web Development.  
-      Explore projects, experience, and more inside.
+      Explore projects, experience, and more below.
     </p>
     <a href="index.html" class="btn-enter">Enter Portfolio</a>
   </div>
