--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-nav">
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
-      <a href="#resume">Skills & Education</a>
+      <a href="#resume">Education & Skills</a>
       <a href="#portfolio">My Projects</a>
       <a href="#blog">Thesis</a>
       <a href="#contact">Contact</a>
@@ -24,7 +24,7 @@
   <!-- ================= Home ================= -->
   <section id="home" class="landing-wrapper">
    
-    <img src="assets/images/val.png" alt="Profile Picture" class="profile-pic">
+    <img src="assets/images/val.png" alt="profile-picture" class="profile-pic">
 
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
@@ -34,7 +34,17 @@
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
       </p>
-      <a href="#about" class="btn-enter">Enter Portfolio</a>
+      <div class="icons">
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="assets/images/contacts/facebook (1).png" class="yellow-icon" alt="facebook-logo">
+        </a>
+        <a href="mailto:vhanzdeass31@gmail.com">
+          <img src="assets/images/contacts/instagram.png" class="yellow-icon" alt="gmail-logo">
+        </a>
+        <a href="https://www.linkedin.com/in/valiant-mi-ing/" target="_blank">
+          <img src="assets/images/contacts/linkedin.png" class="yellow-icon" alt="linkedin-logo">
+        </a>
+      </div>
     </div>
   </section>
 
@@ -72,6 +82,10 @@
           <h3>Photography</h3>
           <p>Capturing moments and creating visual stories through quality photos.</p>
         </div>
+        <div class="card">
+          <h3>Mobile Game</h3>
+          <p>Playing games </p>
+        </div>
       </div>
     </section>
 
@@ -86,13 +100,13 @@
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School<span class="date">2020 - 2018</span></h4>
+          <h4 class="shool">Mankayan National High School <span class="date">2020 - 2018</span></h4>
           <p>Senior High School</p>
           <p class="school-address">Benguet, Philippines</p>
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School<span class="date">2014 - 2018</span></h4>
+          <h4 class="shool">Mankayan National High School <span class="date">2014 - 2018</span></h4>
           <p>Junior High School</p>
           <p class="school-address">Benguet, Philippines</p>
         </div>
@@ -102,7 +116,7 @@
       <div class="about-section">
         <h3><span class="icon">💼</span> Experience</h3>
         <div class="about-item">
-          <h4 class="experience">Technical Support (Intern) <span class="date">January 2025 — May 2025</span></h4>
+          <h4 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h4>
           <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
             of the company website.
           </p>
@@ -206,6 +220,10 @@
       <div class="card-container">
         <div class="card">
           <h3>Post Title 1</h3>
+          <p>Quick excerpt of your blog post.</p>
+        </div>
+        <div class="card">
+          <h3>Post Title 2</h3>
           <p>Quick excerpt of your blog post.</p>
         </div>
         <div class="card">
