--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#resume">Education & Skills</a>
-      <a href="#portfolio">My Projects</a>
       <a href="#blog">Thesis</a>
+      <a href="#portfolio">My Projects</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
@@ -33,7 +33,7 @@
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
-      </p>
+      </p>  
       <div class="icons">
         <a href="https://www.facebook.com/" target="_blank">
           <img src="assets/images/contacts/facebook (1).png" class="yellow-icon" alt="facebook-logo">
@@ -192,6 +192,25 @@
       </div>
     </section>
 
+    <!-- Blog Section -->
+    <section id="blog" class="content-section">
+      <h2>Gallery</h2>
+      <div class="card-container">
+        <div class="card">
+          <h3>Image Title 1</h3>
+          <p>Quick excerpt of your blog post.</p>
+        </div>
+        <div class="card">
+          <h3>Image Title 2</h3>
+          <p>Quick excerpt of your blog post.</p>
+        </div>
+        <div class="card">
+          <h3>Image Title 3</h3>
+          <p>Quick excerpt of your blog post.</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Portfolio Section -->
     <section id="portfolio" class="content-section">
       <h2>My Projects</h2>
@@ -214,23 +233,26 @@
       </div>
     </section>
 
-    <!-- Blog Section -->
-    <section id="blog" class="content-section">
-      <h2>Blog</h2>
+    <!-- Achiements Section -->
+    <section id="achiements" class="content-section">
+      <h2>My Projects</h2>
       <div class="card-container">
         <div class="card">
-          <h3>Post Title 1</h3>
-          <p>Quick excerpt of your blog post.</p>
+          <img src="assets/images/image.png">
+          <h3>Kultoura</h3>
+          <p>This is a  </p>
         </div>
         <div class="card">
-          <h3>Post Title 2</h3>
-          <p>Quick excerpt of your blog post.</p>
+          <img src="assets/images/image.png">
+          <h3>Wordy Game</h3>
+          <p>This is asd </p>
         </div>
         <div class="card">
-          <h3>Post Title 2</h3>
-          <p>Quick excerpt of your blog post.</p>
-        </div>
-      </div>
+          <img src="assets/images/image.png">
+          <h3>Document Reviewer Web Application</h3>
+          <p>This is asd </p>
+        </div>  
+      </div>  
     </section>
 
     <!-- Contact Section -->
