--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#resume">Education & Skills</a>
-      <a href="#blog">Thesis</a>
+      <a href="#blog">Gallery</a>
       <a href="#portfolio">My Projects</a>
       <a href="#contact">Contact</a>
     </div>
@@ -198,15 +198,27 @@
       <div class="card-container">
         <div class="card">
           <h3>Image Title 1</h3>
-          <p>Quick excerpt of your blog post.</p>
+          <p>Quick excerpt of your blog postasdasdasdasdasdasdasa.</p>
         </div>
         <div class="card">
           <h3>Image Title 2</h3>
-          <p>Quick excerpt of your blog post.</p>
+          <p>Quick excerpt of your blogasdasdasdasdasd post.</p>
         </div>
         <div class="card">
           <h3>Image Title 3</h3>
-          <p>Quick excerpt of your blog post.</p>
+          <p>Quick excerpt of your blogasdasdasdasdasdasdasdaaas post.</p>
+        </div>
+        <div class="card">
+          <h3>Image Title 4</h3>
+          <p>Quick excerpt of your blogasdasdasdasd post.</p>
+        </div>
+        <div class="card">
+          <h3>Image Title 5</h3>
+          <p>Quick excerpt of your blog pasdasdasdasdasd asdasd asdas ost.</p>
+        </div>
+        <div class="card">
+          <h3>Image Title 6</h3>
+          <p>Quick excerpt of your blog asasdas asdasd   post.</p>
         </div>
       </div>
     </section>
@@ -234,8 +246,8 @@
     </section>
 
     <!-- Achiements Section -->
-    <section id="achiements" class="content-section">
-      <h2>My Projects</h2>
+    <section id="achievements" class="content-section">
+      <h2>Achievements</h2>
       <div class="card-container">
         <div class="card">
           <img src="assets/images/image.png">
@@ -249,7 +261,7 @@
         </div>
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Document Reviewer Web Application</h3>
+          <h3>Document Reviewer</h3>
           <p>This is asd </p>
         </div>  
       </div>  
