--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           <p>Designing, optimizing, and managing relational and non-relational databases for efficiency and reliability.</p>
         </div>
         <div class="card">
-          <h3>Solving Sudoku Puzzles</h3>
-          <p>Solving Sudoku puzzles to sharpen logical thinking and problem-solving skills.</p>
+          <h3>Solving Sudoku </h3>
+          <p>Solving Sudoku to sharpen logical thinking and problem-solving skills.</p>
         </div>
         <div class="card">
           <h3>Photography</h3>
           <p>Capturing moments and creating visual stories through quality photos.</p>
         </div>
         <div class="card">
-          <h3>Mobile Game</h3>
-          <p>Playing games </p>
+          <h3>Mobile and PC Games</h3>
+          <p>Call of Duty (Mobile) & Dota 2</p>
         </div>
       </div>
     </section>
