Adjust minor spacing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio | One Page</title>
+  <title>My Portfolio</title>
   <link rel="icon" type="image/x-icon" href="assets/images/fav.png">
   <link rel="stylesheet" href="style/index.css">
 </head>
@@ -12,14 +12,18 @@
   <!-- =============== Nav Bar =============== -->
   <nav class="nav-box">
     <div class="top-nav">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#resume">Education & Skills</a>
-      <a href="#blog">Gallery</a>
-      <a href="#portfolio">My Projects</a>
-      <a href="#contact">Contact</a>
+      <h1>My Portfolio</h1>
+      <div class="nav-links">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#resume">Education & Skills</a>
+        <a href="#blog">Gallery</a>
+        <a href="#portfolio">My Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
   </nav>
+
 
   <!-- ================= Home ================= -->
   <section id="home" class="landing-wrapper">
