--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
   <!-- ================= Home ================= -->
   <section id="home" class="landing-wrapper">
-    <img src="assets/images/val.png" alt="profile-picture" class="profile-pic">
+    <img src="assets/images/sad.png" alt="profile-picture" class="profile-pic">
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
-      <h1>Valiant S. Mi-ing</h1>
-      <h2>System Developer</h2>
+      <h1></h1>
+      <h2></h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
@@ -48,13 +48,15 @@
         </a>
       </div>
 
-      <label class="toggle-switch">
-        <input type="checkbox" id="myToggle">
-        <span class="slider round"></span>
-      </label>
     </div>
   </section>
 
+    <div class="right-toggle">
+    <label class="toggle-switch">
+      <input type="checkbox" id="myToggle">
+      <span class="slider round"></span>
+    </label>
+  </div>
   <!-- ================= Main Content ================= -->
   <main class="main">
     <section id="about" class="content-section no-box">
@@ -62,36 +64,21 @@
       <p id="description">
         I am a passionate System Developer with experience in designing, building, and maintaining software solutions that solve real-world problems. 
         I specialize in creating efficient, scalable, and user-friendly applications by combining strong technical skills with a keen eye for detail. 
-        My expertise includes backend and frontend development, database design, and systems integration. 
-        I enjoy working with modern frameworks, and agile methodologies to deliver high-quality results. 
-        Beyond coding, I value teamwork, continuous learning, and innovation, striving to provide solutions that not only meet client needs but also exceed expectations.
       </p>
 
       <h2>Interest</h2>
       <div class="card-container">
         <div class="card">
-          <h3>System Development</h3>
+          <h3> Development</h3>
           <p>High-quality development of responsive and dynamic websites at the professional level.</p>
         </div>
         <div class="card">
-          <h3>Web Applications</h3>
+          <h3>Application</h3>
           <p>Professional development of scalable and secure web applications for businesses and organizations.</p>
         </div>
         <div class="card">
-          <h3>Database Management</h3>
+          <h3>Data</h3>
           <p>Designing, optimizing, and managing relational and non-relational databases for efficiency and reliability.</p>
-        </div>
-        <div class="card">
-          <h3>Solving Sudoku </h3>
-          <p>Solving Sudoku to sharpen logical thinking and problem-solving skills.</p>
-        </div>
-        <div class="card">
-          <h3>Photography</h3>
-          <p>Capturing moments and creating visual stories through quality photos.</p>
-        </div>
-        <div class="card">
-          <h3>Mobile and PC Games</h3>
-          <p>Call of Duty (Mobile) & Dota 2</p>
         </div>
       </div>
     </section>
@@ -101,21 +88,21 @@
       <div class="about-section">
         <h3><span class="icon">🎓</span> Education</h3>
         <div class="about-item">
-          <h4 class="shool">Saint Louis University <span class="date">2020 - 2025</span></h4>
-          <p>Bachelor of Science in Information Technology</p>
-          <p class="school-address">Baguio City, Philippines</p>
+          <h4 class="shool">SCHOOL NAME<span class="date"> - </span></h4>
+          <p>Bachelor bla</p>
+          <p class="school-address"></p>
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School <span class="date">2020 - 2018</span></h4>
-          <p>Senior High School</p>
-          <p class="school-address">Benguet, Philippines</p>
+          <h4 class="shool">SCHOOL NAME<span class="date"> - </span></h4>
+          <p> School</p>
+          <p class="school-address"></p>
         </div>
         <br>
         <div class="about-item">
-          <h4 class="shool">Mankayan National High School <span class="date">2014 - 2018</span></h4>
-          <p>Junior High School</p>
-          <p class="school-address">Benguet, Philippines</p>
+          <h4 class="shool">SCHOOL NAME<span class="date">2014 - </span></h4>
+          <p>School</p>
+          <p class="school-address"></p>
         </div>
         <br>
       </div>
@@ -123,9 +110,8 @@
       <div class="about-section">
         <h3><span class="icon">💼</span> Experience</h3>
         <div class="about-item">
-          <h4 class="experience">Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h4>
-          <p>Developed a web application for webinar training management for teachers and enhanced and suggest improvement
-            of the company website.
+          <h4 class="experience"> Support <span class="date"></span></h4>
+          <p>sdasdasfsd
           </p>
         </div>
       </div>
@@ -137,12 +123,12 @@
         <div class="skill">
           <h4>Programming Language</h4>
           <br>
-          <span class="skill-title">Java</span>
+          <span class="skill-title">tech</span>
             <span class="skill-percent">80%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 80%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title">Python</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">35%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 35%;"></div></div>
           </div>
@@ -150,31 +136,31 @@
             
             <h4>Web Developement</h4>
             <br>
-            <span class="skill-title">Php</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">HTML</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">Javascript</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">55%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 55%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">CSS</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">45%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 45%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title">Wordpress</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">40%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 40%;"></div></div>
           </div>
@@ -182,7 +168,7 @@
            <h4>Database Management</h4>
             <br>
           <div class="skill">
-            <span class="skill-title">MySQL</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">75%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
           </div>
@@ -190,7 +176,7 @@
           <h4>Version Control</h4>
           <br>
           <div class="skill">
-            <span class="skill-title">Git</span>
+            <span class="skill-title">tech</span>
             <span class="skill-percent">60%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 60%;"></div></div>
           </div>
@@ -234,17 +220,17 @@
       <div class="card-container">
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Kultoura</h3>
+          <h3>Project Title</h3>
           <p>This is a  </p>
         </div>
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Wordy Game</h3>
+          <h3>Project Title</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Document Reviewer Web Application</h3>
+          <h3>Project Title</h3>
           <p>This is asd </p>
         </div>  
       </div>
@@ -256,17 +242,17 @@
       <div class="card-container">
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Kultoura</h3>
+          <h3>Achievement 1</h3>
           <p>This is a  </p>
         </div>
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Wordy Game</h3>
+          <h3>Achievement 2</h3>
           <p>This is asd </p>
         </div>
         <div class="card">
           <img src="assets/images/image.png">
-          <h3>Document Reviewer</h3>
+          <h3>Achievement 3</h3>
           <p>This is asd </p>
         </div>  
       </div>  
@@ -280,7 +266,7 @@
     </section>
 
     <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5852419980192!2d120.57181008864467!3d16.416165738438767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a1003aebf95b%3A0x4cbc05568cc663f7!2sQuezon%20Hill%20road!5e0!3m2!1sen!2sph!4v1759200050674!5m2!1sen!2sph" 
+      <iframe src="" 
         width="1300" 
         height="500" 
         style="border:0;" 
@@ -289,12 +275,14 @@
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
-
     <!-- Footer -->
     <footer>
       © 2025 My Portfolio. All Rights Reserved.
     </footer>
+
+    
   </main>
+  
   <script src="js/index.js"></script>
 </body>
 </html>
