--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
     </div>
   </section>
 
+  <div class="right-toggle">
+    <label class="toggle-switch">
+      <input type="checkbox" id="myToggle">
+      <span class="slider round"></span>
+    </label>
+  </div>
+
   <!-- ================= Main Content ================= -->
   <main class="main">
     <section id="about" class="content-section no-box">
