--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- =============== Nav Bar =============== -->
   <nav class="nav-box">
     <div class="top-nav">
-      <h1>My Portfolio</h1>
+      <h1>Portfolio</h1>
       <div class="nav-links">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -278,13 +278,13 @@
     <section id="contact" class="content-section">
       <h2>Contact</h2>
       <p>If you’d like to get in touch, feel free to reach out via email or connect with me on LinkedIn.</p>
-      <p>Email: <a href="mailto:richard@example.com">richard@example.com</a></p>
+      <p>Email: <a href="mailto:miingvaliant@gmail.com">miingvaliant@gmail.com</a></p>
     </section>
 
     <div class="map-container">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5852419980192!2d120.57181008864467!3d16.416165738438767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a1003aebf95b%3A0x4cbc05568cc663f7!2sQuezon%20Hill%20road!5e0!3m2!1sen!2sph!4v1759200050674!5m2!1sen!2sph" 
         width="1300" 
-        height="500" 
+        height="400" 
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy" 
